COntinue to fleshout the site

--- a/crosscheck-project/demos/it-business/it-business.css
+++ b/crosscheck-project/demos/it-business/it-business.css
@@ -68,6 +68,12 @@ header.sticky.sticky-active [data-header-hover="light"] .widget-text i {
     background-size: 200% auto;
     color: var(--white);
 }
+.btn-gradient-blue-orange {
+    background-image: linear-gradient(to right, #0b58cb, #e97837, #0b58cb);
+    background-size: 200% auto;
+    color: var(--white);
+}
+
 /* bg gradient color */
 .bg-gradient-dark-gray-transparent { 
     background: -webkit-linear-gradient(right, rgba(24, 25, 28, .5), rgba(255, 255, 255, 0.0));
